unpackaged/main/default/objects/A1_C360API_creds__mdt/A1_C360API_creds__mdt.object-meta.xml
<CustomObject>
    <description>Purpose of this MDT is to store the brand specific 360 API credentials specific to the environment.</description>
    <label>A1 C360API creds</label>
    <pluralLabel>A1 C360API creds</pluralLabel>
</CustomObject>